autopep8 formatter for Cython codes

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -8773,15 +8773,16 @@
    "source": [
     "%%cython -a\n",
     "\n",
+    "import numpy as _np\n",
+    "from cython.parallel import prange\n",
+    "from cython cimport floating\n",
     "from libc.math cimport log, isfinite, pow, fmax\n",
     "from libc.stdlib cimport calloc, free, qsort, malloc\n",
     "cimport cython\n",
-    "from cython cimport floating\n",
-    "from cython.parallel import prange\n",
-    "import numpy as _np\n",
     "ctypedef fused floating_float_double:\n",
     "    float\n",
     "    double\n",
+    "\n",
     "\n",
     "@cython.boundscheck(False)\n",
     "@cython.wraparound(False)\n",
@@ -8790,8 +8791,8 @@
     "    cdef int i, j\n",
     "    cdef int joint_shape0 = joint.shape[0]\n",
     "    cdef int joint_shape1 = joint.shape[1]\n",
-    "    cdef floating_float_double *log_a_marginal = <floating_float_double*>calloc(joint_shape0, sizeof(floating_float_double))\n",
-    "    cdef floating_float_double *log_b_marginal = <floating_float_double*>calloc(joint_shape1, sizeof(floating_float_double))\n",
+    "    cdef floating_float_double * log_a_marginal = <floating_float_double*>calloc(joint_shape0, sizeof(floating_float_double))\n",
+    "    cdef floating_float_double * log_b_marginal = <floating_float_double*>calloc(joint_shape1, sizeof(floating_float_double))\n",
     "    cdef floating_float_double temp_sum, log_val, log_temp_sum, log_forward_euler_a, log_forward_euler_b, log_joint, output\n",
     "\n",
     "    if log_a_marginal == NULL or log_b_marginal == NULL:\n",
@@ -8812,17 +8813,20 @@
     "\n",
     "    for i in prange(joint_shape0, nogil=True):\n",
     "        log_val = log(log_a_marginal[i])\n",
-    "        log_a_marginal[i] = log_val + log_forward_euler_b if isfinite(log_val) else 0.0\n",
+    "        log_a_marginal[i] = log_val + \\\n",
+    "            log_forward_euler_b if isfinite(log_val) else 0.0\n",
     "\n",
     "    for j in prange(joint_shape1, nogil=True):\n",
     "        log_val = log(log_b_marginal[j])\n",
-    "        log_b_marginal[j] = log_val + log_forward_euler_a if isfinite(log_val) else 0.0\n",
+    "        log_b_marginal[j] = log_val + \\\n",
+    "            log_forward_euler_a if isfinite(log_val) else 0.0\n",
     "\n",
     "    output = 0.0\n",
     "    for i in prange(joint_shape0, nogil=True):\n",
     "        for j in prange(joint_shape1):\n",
     "            log_joint = log(joint[i, j]) if isfinite(log(joint[i, j])) else 0.0\n",
-    "            output += joint[i, j] * (log_joint - log_a_marginal[i] - log_b_marginal[j]) * forward_euler_a * forward_euler_b\n",
+    "            output += joint[i, j] * (log_joint - log_a_marginal[i] -\n",
+    "                                     log_b_marginal[j]) * forward_euler_a * forward_euler_b\n",
     "\n",
     "    output = max(output, 0.0)\n",
     "\n",
@@ -8830,6 +8834,7 @@
     "    free(log_b_marginal)\n",
     "\n",
     "    return output\n",
+    "\n",
     "\n",
     "@cython.boundscheck(False)\n",
     "@cython.wraparound(False)\n",
@@ -8839,7 +8844,7 @@
     "    Calculate the value of the objective function for histogram binning.\n",
     "    \"\"\"\n",
     "    cdef int N = x.shape[0]\n",
-    "    cdef int *N_j\n",
+    "    cdef int * N_j\n",
     "    cdef int i, bin_index\n",
     "    cdef double x_min, x_max, bin_width, result = 0.0, total_sum = 0.0\n",
     "    cdef floating_float_double xi\n",
@@ -8847,8 +8852,10 @@
     "    # Initialize min and max\n",
     "    x_min = x_max = x[0]\n",
     "    for i in range(N):\n",
-    "        if x[i] < x_min: x_min = x[i]\n",
-    "        if x[i] > x_max: x_max = x[i]\n",
+    "        if x[i] < x_min:\n",
+    "            x_min = x[i]\n",
+    "        if x[i] > x_max:\n",
+    "            x_max = x[i]\n",
     "\n",
     "    # Allocate memory for histogram counts\n",
     "    N_j = <int*>calloc(D, sizeof(int))\n",
@@ -8861,7 +8868,7 @@
     "    # Histogram calculation\n",
     "    for i in range(N):\n",
     "        xi = x[i]\n",
-    "        bin_index = <int>((xi - x_min) / bin_width)\n",
+    "        bin_index = <int > ((xi - x_min) / bin_width)\n",
     "        if bin_index >= D:\n",
     "            bin_index = D - 1\n",
     "        N_j[bin_index] += 1\n",
@@ -8878,6 +8885,7 @@
     "    free(N_j)\n",
     "\n",
     "    return result\n",
+    "\n",
     "\n",
     "@cython.boundscheck(False)\n",
     "@cython.wraparound(False)\n",
@@ -8898,6 +8906,7 @@
     "\n",
     "    return max_D\n",
     "\n",
+    "\n",
     "@cython.boundscheck(False)\n",
     "@cython.wraparound(False)\n",
     "cpdef double binning_MI_cython(floating_float_double[:] a, floating_float_double[:] b):\n",
@@ -8907,8 +8916,8 @@
     "    cdef int N = a.shape[0]\n",
     "    cdef int D_a = num_of_bins_cython(a)\n",
     "    cdef int D_b = num_of_bins_cython(b)\n",
-    "    cdef int *histogram\n",
-    "    cdef double *normalized_histogram_ptr\n",
+    "    cdef int * histogram\n",
+    "    cdef double * normalized_histogram_ptr\n",
     "    cdef double[:, ::1] joint_2d\n",
     "    cdef int i, j, bin_index_a, bin_index_b\n",
     "    cdef double a_min, a_max, b_min, b_max, bin_width_a, bin_width_b, total = 0.0\n",
@@ -8918,10 +8927,14 @@
     "    a_min, a_max = a[0], a[0]\n",
     "    b_min, b_max = b[0], b[0]\n",
     "    for i in range(N):\n",
-    "        if a[i] < a_min: a_min = a[i]\n",
-    "        if a[i] > a_max: a_max = a[i]\n",
-    "        if b[i] < b_min: b_min = b[i]\n",
-    "        if b[i] > b_max: b_max = b[i]\n",
+    "        if a[i] < a_min:\n",
+    "            a_min = a[i]\n",
+    "        if a[i] > a_max:\n",
+    "            a_max = a[i]\n",
+    "        if b[i] < b_min:\n",
+    "            b_min = b[i]\n",
+    "        if b[i] > b_max:\n",
+    "            b_max = b[i]\n",
     "\n",
     "    # Allocate memory for 2D histogram\n",
     "    histogram = <int*>calloc(D_a * D_b, sizeof(int))\n",
@@ -8936,16 +8949,19 @@
     "    for i in range(N):\n",
     "        ai = a[i]\n",
     "        bi = b[i]\n",
-    "        bin_index_a = <int>((ai - a_min) / bin_width_a)\n",
-    "        bin_index_b = <int>((bi - b_min) / bin_width_b)\n",
-    "        if bin_index_a >= D_a: bin_index_a = D_a - 1\n",
-    "        if bin_index_b >= D_b: bin_index_b = D_b - 1\n",
+    "        bin_index_a = <int > ((ai - a_min) / bin_width_a)\n",
+    "        bin_index_b = <int > ((bi - b_min) / bin_width_b)\n",
+    "        if bin_index_a >= D_a:\n",
+    "            bin_index_a = D_a - 1\n",
+    "        if bin_index_b >= D_b:\n",
+    "            bin_index_b = D_b - 1\n",
     "        histogram[bin_index_a * D_b + bin_index_b] += 1\n",
     "\n",
     "    # Allocate memory for normalized histogram\n",
-    "    normalized_histogram_ptr = <double *> calloc(D_a * D_b, sizeof(double))\n",
+    "    normalized_histogram_ptr = <double * > calloc(D_a * D_b, sizeof(double))\n",
     "    if normalized_histogram_ptr == NULL:\n",
-    "        raise MemoryError(\"Failed to allocate memory for normalized histogram.\")\n",
+    "        raise MemoryError(\n",
+    "            \"Failed to allocate memory for normalized histogram.\")\n",
     "\n",
     "    # Normalize histogram to get joint probability\n",
     "    total = 0.0\n",
@@ -8953,10 +8969,11 @@
     "        total += histogram[i]\n",
     "    for i in range(D_a):\n",
     "        for j in range(D_b):\n",
-    "            normalized_histogram_ptr[i * D_b + j] = histogram[i * D_b + j] / total\n",
+    "            normalized_histogram_ptr[i * D_b +\n",
+    "                                     j] = histogram[i * D_b + j] / total\n",
     "\n",
     "    # Wrap the normalized histogram pointer as a 2D memory view\n",
-    "    joint_2d = <double[:D_a, :D_b]>normalized_histogram_ptr\n",
+    "    joint_2d = <double[:D_a, :D_b] > normalized_histogram_ptr\n",
     "\n",
     "    # Calculate mutual information\n",
     "    mi = joint_to_mi_cython(joint_2d)\n",
@@ -8967,6 +8984,7 @@
     "\n",
     "    return mi\n",
     "\n",
+    "\n",
     "@cython.boundscheck(False)\n",
     "@cython.wraparound(False)\n",
     "cpdef double binning_MI_discrete_cython(floating_float_double[:] a, floating_float_double[:] b):\n",
@@ -8976,8 +8994,8 @@
     "    cdef int N = a.shape[0]\n",
     "    cdef int D_a = len(_np.unique(a))\n",
     "    cdef int D_b = num_of_bins_cython(b)\n",
-    "    cdef int *histogram\n",
-    "    cdef double *normalized_histogram_ptr\n",
+    "    cdef int * histogram\n",
+    "    cdef double * normalized_histogram_ptr\n",
     "    cdef double[:, ::1] joint_2d\n",
     "    cdef int i, j, bin_index_a, bin_index_b\n",
     "    cdef double a_min, a_max, b_min, b_max, bin_width_a, bin_width_b, total = 0.0\n",
@@ -8987,10 +9005,14 @@
     "    a_min, a_max = a[0], a[0]\n",
     "    b_min, b_max = b[0], b[0]\n",
     "    for i in range(N):\n",
-    "        if a[i] < a_min: a_min = a[i]\n",
-    "        if a[i] > a_max: a_max = a[i]\n",
-    "        if b[i] < b_min: b_min = b[i]\n",
-    "        if b[i] > b_max: b_max = b[i]\n",
+    "        if a[i] < a_min:\n",
+    "            a_min = a[i]\n",
+    "        if a[i] > a_max:\n",
+    "            a_max = a[i]\n",
+    "        if b[i] < b_min:\n",
+    "            b_min = b[i]\n",
+    "        if b[i] > b_max:\n",
+    "            b_max = b[i]\n",
     "\n",
     "    # Allocate memory for 2D histogram\n",
     "    histogram = <int*>calloc(D_a * D_b, sizeof(int))\n",
@@ -9005,16 +9027,19 @@
     "    for i in range(N):\n",
     "        ai = a[i]\n",
     "        bi = b[i]\n",
-    "        bin_index_a = <int>((ai - a_min) / bin_width_a)\n",
-    "        bin_index_b = <int>((bi - b_min) / bin_width_b)\n",
-    "        if bin_index_a >= D_a: bin_index_a = D_a - 1\n",
-    "        if bin_index_b >= D_b: bin_index_b = D_b - 1\n",
+    "        bin_index_a = <int > ((ai - a_min) / bin_width_a)\n",
+    "        bin_index_b = <int > ((bi - b_min) / bin_width_b)\n",
+    "        if bin_index_a >= D_a:\n",
+    "            bin_index_a = D_a - 1\n",
+    "        if bin_index_b >= D_b:\n",
+    "            bin_index_b = D_b - 1\n",
     "        histogram[bin_index_a * D_b + bin_index_b] += 1\n",
     "\n",
     "    # Allocate memory for normalized histogram\n",
-    "    normalized_histogram_ptr = <double *> calloc(D_a * D_b, sizeof(double))\n",
+    "    normalized_histogram_ptr = <double * > calloc(D_a * D_b, sizeof(double))\n",
     "    if normalized_histogram_ptr == NULL:\n",
-    "        raise MemoryError(\"Failed to allocate memory for normalized histogram.\")\n",
+    "        raise MemoryError(\n",
+    "            \"Failed to allocate memory for normalized histogram.\")\n",
     "\n",
     "    # Normalize histogram to get joint probability\n",
     "    total = 0.0\n",
@@ -9022,10 +9047,11 @@
     "        total += histogram[i]\n",
     "    for i in range(D_a):\n",
     "        for j in range(D_b):\n",
-    "            normalized_histogram_ptr[i * D_b + j] = histogram[i * D_b + j] / total\n",
+    "            normalized_histogram_ptr[i * D_b +\n",
+    "                                     j] = histogram[i * D_b + j] / total\n",
     "\n",
     "    # Wrap the normalized histogram pointer as a 2D memory view\n",
-    "    joint_2d = <double[:D_a, :D_b]>normalized_histogram_ptr\n",
+    "    joint_2d = <double[:D_a, :D_b] > normalized_histogram_ptr\n",
     "\n",
     "    # Calculate mutual information\n",
     "    mi = joint_to_mi_cython(joint_2d)\n",
