--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -22,11 +22,11 @@
      "start_time": "2023-12-27T13:01:50.975866Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:53.805985Z",
-     "iopub.status.busy": "2024-02-25T03:55:53.805912Z",
-     "iopub.status.idle": "2024-02-25T03:55:54.394051Z",
-     "shell.execute_reply": "2024-02-25T03:55:54.393689Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:53.805977Z"
+     "iopub.execute_input": "2024-02-25T23:47:19.804964Z",
+     "iopub.status.busy": "2024-02-25T23:47:19.804841Z",
+     "iopub.status.idle": "2024-02-25T23:47:20.554051Z",
+     "shell.execute_reply": "2024-02-25T23:47:20.553590Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:19.804951Z"
     }
    },
    "outputs": [],
@@ -94,11 +94,11 @@
      "start_time": "2023-12-27T13:02:06.503768Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:54.395020Z",
-     "iopub.status.busy": "2024-02-25T03:55:54.394810Z",
-     "iopub.status.idle": "2024-02-25T03:55:54.403406Z",
-     "shell.execute_reply": "2024-02-25T03:55:54.403129Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:54.395000Z"
+     "iopub.execute_input": "2024-02-25T23:47:20.554814Z",
+     "iopub.status.busy": "2024-02-25T23:47:20.554671Z",
+     "iopub.status.idle": "2024-02-25T23:47:20.562718Z",
+     "shell.execute_reply": "2024-02-25T23:47:20.562392Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:20.554805Z"
     }
    },
    "outputs": [],
@@ -168,7 +168,7 @@
     "\n",
     "    mean = np.ones(num_true_vars)*6.\n",
     "    true_beta_cov = toeplitz(0.6**np.arange(num_true_vars))\n",
-    "    true_beta = np.random.multivariate_normal(mean, X_cov, 1).flatten()\n",
+    "    true_beta = np.random.multivariate_normal(mean, true_beta_cov, 1).flatten()\n",
     "    # true_beta = np.random.choice([1., -1.], num_true_vars, replace=True)\n",
     "    #     true_beta = np.random.uniform(low=5.0, high=6.0,\n",
     "    #                                   size=num_true_vars) * np.random.choice(\n",
@@ -289,7 +289,7 @@
     "\n",
     "    mean = np.ones(num_true_vars)*6.\n",
     "    true_beta_cov = toeplitz(0.6**np.arange(num_true_vars))\n",
-    "    true_beta = np.random.multivariate_normal(mean, X_cov, 1).flatten()\n",
+    "    true_beta = np.random.multivariate_normal(mean, true_beta_cov, 1).flatten()\n",
     "    # true_beta = np.random.choice([1., -1.], num_true_vars, replace=True)    #     true_beta = np.random.uniform(low=.5, high=.6,\n",
     "    #                                   size=num_true_vars) * np.random.choice(\n",
     "    #                                       [1., -1.], num_true_vars, replace=True)\n",
@@ -412,7 +412,7 @@
     "\n",
     "    mean = np.ones(num_true_vars)*6.\n",
     "    true_beta_cov = toeplitz(0.6**np.arange(num_true_vars))\n",
-    "    true_beta = np.random.multivariate_normal(mean, X_cov, 1).flatten()\n",
+    "    true_beta = np.random.multivariate_normal(mean, true_beta_cov, 1).flatten()\n",
     "    # true_beta = np.random.choice([1., -1.], num_true_vars, replace=True)    #     true_beta = np.random.uniform(low=.5, high=.6,\n",
     "    #                                   size=num_true_vars) * np.random.choice(\n",
     "    #                                       [1., -1.], num_true_vars, replace=True)\n",
@@ -611,11 +611,11 @@
      "start_time": "2023-12-27T13:02:06.580812Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:54.403980Z",
-     "iopub.status.busy": "2024-02-25T03:55:54.403883Z",
-     "iopub.status.idle": "2024-02-25T03:55:54.435813Z",
-     "shell.execute_reply": "2024-02-25T03:55:54.435427Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:54.403971Z"
+     "iopub.execute_input": "2024-02-25T23:47:20.563959Z",
+     "iopub.status.busy": "2024-02-25T23:47:20.563885Z",
+     "iopub.status.idle": "2024-02-25T23:47:20.585979Z",
+     "shell.execute_reply": "2024-02-25T23:47:20.585637Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:20.563952Z"
     }
    },
    "outputs": [],
@@ -685,7 +685,7 @@
     "\n",
     "    mean = np.ones(num_true_vars)*6.\n",
     "    true_beta_cov = toeplitz(0.6**np.arange(num_true_vars))\n",
-    "    true_beta = np.random.multivariate_normal(mean, X_cov, 1).flatten()\n",
+    "    true_beta = np.random.multivariate_normal(mean, true_beta_cov, 1).flatten()\n",
     "    # true_beta = np.random.choice([1., -1.], num_true_vars, replace=True)    #     true_beta = np.random.uniform(low=5.0, high=6.0,\n",
     "    #                                   size=num_true_vars) * np.random.choice(\n",
     "    #                                       [1., -1.], num_true_vars, replace=True)\n",
@@ -803,7 +803,7 @@
     "\n",
     "    mean = np.ones(num_true_vars)*6.\n",
     "    true_beta_cov = toeplitz(0.6**np.arange(num_true_vars))\n",
-    "    true_beta = np.random.multivariate_normal(mean, X_cov, 1).flatten()\n",
+    "    true_beta = np.random.multivariate_normal(mean, true_beta_cov, 1).flatten()\n",
     "    # true_beta = np.random.choice([1., -1.], num_true_vars, replace=True)    #     true_beta = np.random.uniform(low=.5, high=.6,\n",
     "    #                                   size=num_true_vars) * np.random.choice(\n",
     "    #                                       [1., -1.], num_true_vars, replace=True)\n",
@@ -924,7 +924,7 @@
     "\n",
     "    mean = np.ones(num_true_vars)*6.\n",
     "    true_beta_cov = toeplitz(0.6**np.arange(num_true_vars))\n",
-    "    true_beta = np.random.multivariate_normal(mean, X_cov, 1).flatten()\n",
+    "    true_beta = np.random.multivariate_normal(mean, true_beta_cov, 1).flatten()\n",
     "    # true_beta = np.random.choice([1., -1.], num_true_vars, replace=True)    #     true_beta = np.random.uniform(low=.5, high=.6,\n",
     "    #                                   size=num_true_vars) * np.random.choice(\n",
     "    #                                       [1., -1.], num_true_vars, replace=True)\n",
@@ -1121,11 +1121,11 @@
      "start_time": "2023-12-27T13:02:06.650662Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:54.436401Z",
-     "iopub.status.busy": "2024-02-25T03:55:54.436274Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.058202Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.057873Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:54.436392Z"
+     "iopub.execute_input": "2024-02-25T23:47:20.586448Z",
+     "iopub.status.busy": "2024-02-25T23:47:20.586357Z",
+     "iopub.status.idle": "2024-02-25T23:47:21.303764Z",
+     "shell.execute_reply": "2024-02-25T23:47:21.303359Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:20.586440Z"
     }
    },
    "outputs": [
@@ -1289,11 +1289,11 @@
      "start_time": "2023-12-27T13:02:09.070626Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.058680Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.058519Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.563425Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.563052Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.058671Z"
+     "iopub.execute_input": "2024-02-25T23:47:21.304288Z",
+     "iopub.status.busy": "2024-02-25T23:47:21.304128Z",
+     "iopub.status.idle": "2024-02-25T23:47:21.780788Z",
+     "shell.execute_reply": "2024-02-25T23:47:21.780459Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:21.304279Z"
     }
    },
    "outputs": [
@@ -1458,11 +1458,11 @@
      "start_time": "2023-12-27T13:02:09.728518Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.563894Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.563801Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.569879Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.569589Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.563885Z"
+     "iopub.execute_input": "2024-02-25T23:47:21.781911Z",
+     "iopub.status.busy": "2024-02-25T23:47:21.781782Z",
+     "iopub.status.idle": "2024-02-25T23:47:21.787893Z",
+     "shell.execute_reply": "2024-02-25T23:47:21.787528Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:21.781902Z"
     }
    },
    "outputs": [],
@@ -1783,11 +1783,11 @@
      "start_time": "2023-12-27T13:02:09.751166Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.570829Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.570729Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.597946Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.597653Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.570821Z"
+     "iopub.execute_input": "2024-02-25T23:47:21.788410Z",
+     "iopub.status.busy": "2024-02-25T23:47:21.788313Z",
+     "iopub.status.idle": "2024-02-25T23:47:21.819078Z",
+     "shell.execute_reply": "2024-02-25T23:47:21.818595Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:21.788402Z"
     }
    },
    "outputs": [],
@@ -2021,11 +2021,11 @@
      "start_time": "2023-12-27T13:02:09.770297Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.598394Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.598300Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.621225Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.620919Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.598386Z"
+     "iopub.execute_input": "2024-02-25T23:47:21.819573Z",
+     "iopub.status.busy": "2024-02-25T23:47:21.819463Z",
+     "iopub.status.idle": "2024-02-25T23:47:21.833960Z",
+     "shell.execute_reply": "2024-02-25T23:47:21.833539Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:21.819564Z"
     }
    },
    "outputs": [],
@@ -2163,11 +2163,11 @@
      "start_time": "2023-12-27T13:02:09.775463Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.621658Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.621569Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.642986Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.642697Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.621650Z"
+     "iopub.execute_input": "2024-02-25T23:47:21.834603Z",
+     "iopub.status.busy": "2024-02-25T23:47:21.834477Z",
+     "iopub.status.idle": "2024-02-25T23:47:21.855339Z",
+     "shell.execute_reply": "2024-02-25T23:47:21.854935Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:21.834593Z"
     }
    },
    "outputs": [],
@@ -2221,11 +2221,11 @@
      "start_time": "2023-12-27T13:02:09.782024Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.643420Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.643329Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.664492Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.664186Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.643412Z"
+     "iopub.execute_input": "2024-02-25T23:47:21.856002Z",
+     "iopub.status.busy": "2024-02-25T23:47:21.855822Z",
+     "iopub.status.idle": "2024-02-25T23:47:21.876173Z",
+     "shell.execute_reply": "2024-02-25T23:47:21.875735Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:21.855983Z"
     }
    },
    "outputs": [],
@@ -2278,11 +2278,11 @@
      "start_time": "2023-12-27T13:02:09.785456Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.664957Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.664845Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.683718Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.683418Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.664949Z"
+     "iopub.execute_input": "2024-02-25T23:47:21.877027Z",
+     "iopub.status.busy": "2024-02-25T23:47:21.876741Z",
+     "iopub.status.idle": "2024-02-25T23:47:21.893898Z",
+     "shell.execute_reply": "2024-02-25T23:47:21.893506Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:21.877012Z"
     }
    },
    "outputs": [],
@@ -2432,11 +2432,11 @@
      "start_time": "2023-12-27T13:02:09.793938Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.684291Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.684155Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.721290Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.720898Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.684282Z"
+     "iopub.execute_input": "2024-02-25T23:47:21.894660Z",
+     "iopub.status.busy": "2024-02-25T23:47:21.894496Z",
+     "iopub.status.idle": "2024-02-25T23:47:21.938951Z",
+     "shell.execute_reply": "2024-02-25T23:47:21.938467Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:21.894646Z"
     }
    },
    "outputs": [],
@@ -2773,11 +2773,11 @@
      "start_time": "2023-12-27T13:02:10.817980Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.721746Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.721658Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.747056Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.746751Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.721738Z"
+     "iopub.execute_input": "2024-02-25T23:47:21.939567Z",
+     "iopub.status.busy": "2024-02-25T23:47:21.939464Z",
+     "iopub.status.idle": "2024-02-25T23:47:21.969518Z",
+     "shell.execute_reply": "2024-02-25T23:47:21.969003Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:21.939558Z"
     }
    },
    "outputs": [],
@@ -3125,11 +3125,11 @@
      "start_time": "2023-12-27T13:02:12.012143Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.747581Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.747484Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.768991Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.768662Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.747572Z"
+     "iopub.execute_input": "2024-02-25T23:47:21.970310Z",
+     "iopub.status.busy": "2024-02-25T23:47:21.970149Z",
+     "iopub.status.idle": "2024-02-25T23:47:22.006273Z",
+     "shell.execute_reply": "2024-02-25T23:47:22.005981Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:21.970296Z"
     }
    },
    "outputs": [
@@ -3370,11 +3370,11 @@
      "start_time": "2023-12-27T13:02:12.061413Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.769466Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.769352Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.791984Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.791667Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.769457Z"
+     "iopub.execute_input": "2024-02-25T23:47:22.006817Z",
+     "iopub.status.busy": "2024-02-25T23:47:22.006710Z",
+     "iopub.status.idle": "2024-02-25T23:47:22.031045Z",
+     "shell.execute_reply": "2024-02-25T23:47:22.030761Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:22.006808Z"
     }
    },
    "outputs": [
@@ -3621,11 +3621,11 @@
      "start_time": "2023-12-27T13:02:12.086127Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.792463Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.792356Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.812645Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.812146Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.792455Z"
+     "iopub.execute_input": "2024-02-25T23:47:22.031566Z",
+     "iopub.status.busy": "2024-02-25T23:47:22.031462Z",
+     "iopub.status.idle": "2024-02-25T23:47:22.050853Z",
+     "shell.execute_reply": "2024-02-25T23:47:22.050131Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:22.031557Z"
     }
    },
    "outputs": [],
@@ -3970,11 +3970,11 @@
      "start_time": "2023-12-27T13:02:12.880197Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.813163Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.813067Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.835667Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.835337Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.813155Z"
+     "iopub.execute_input": "2024-02-25T23:47:22.051853Z",
+     "iopub.status.busy": "2024-02-25T23:47:22.051704Z",
+     "iopub.status.idle": "2024-02-25T23:47:22.071199Z",
+     "shell.execute_reply": "2024-02-25T23:47:22.070862Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:22.051842Z"
     }
    },
    "outputs": [],
@@ -4321,11 +4321,11 @@
      "start_time": "2023-12-27T13:02:13.729859Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.836199Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.836063Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.859315Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.859030Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.836187Z"
+     "iopub.execute_input": "2024-02-25T23:47:22.071806Z",
+     "iopub.status.busy": "2024-02-25T23:47:22.071692Z",
+     "iopub.status.idle": "2024-02-25T23:47:22.096613Z",
+     "shell.execute_reply": "2024-02-25T23:47:22.096107Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:22.071796Z"
     }
    },
    "outputs": [
@@ -4546,11 +4546,11 @@
      "start_time": "2023-12-27T13:02:13.773279Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.859830Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.859693Z",
-     "iopub.status.idle": "2024-02-25T03:55:55.883404Z",
-     "shell.execute_reply": "2024-02-25T03:55:55.883186Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.859822Z"
+     "iopub.execute_input": "2024-02-25T23:47:22.097159Z",
+     "iopub.status.busy": "2024-02-25T23:47:22.097034Z",
+     "iopub.status.idle": "2024-02-25T23:47:22.117844Z",
+     "shell.execute_reply": "2024-02-25T23:47:22.117579Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:22.097147Z"
     }
    },
    "outputs": [
@@ -4759,11 +4759,11 @@
    "id": "9357b9e8-e31c-47ce-b3a3-11f1aeba79a6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-25T03:55:55.883891Z",
-     "iopub.status.busy": "2024-02-25T03:55:55.883736Z",
-     "iopub.status.idle": "2024-02-25T04:00:30.614262Z",
-     "shell.execute_reply": "2024-02-25T04:00:30.613700Z",
-     "shell.execute_reply.started": "2024-02-25T03:55:55.883883Z"
+     "iopub.execute_input": "2024-02-25T23:47:22.118285Z",
+     "iopub.status.busy": "2024-02-25T23:47:22.118194Z",
+     "iopub.status.idle": "2024-02-25T23:52:20.154885Z",
+     "shell.execute_reply": "2024-02-25T23:52:20.154192Z",
+     "shell.execute_reply.started": "2024-02-25T23:47:22.118277Z"
     }
    },
    "outputs": [],
