updating GPG key information for signing commits

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -5,10 +5,12 @@
    "id": "dddbce4a",
    "metadata": {},
    "source": [
+    "# `fastHDMI` Screening Module\n",
+    "\n",
     "## Kai Yang\n",
     "## <kai.yang2 \"at\" mail.mcgill.ca>\n",
     "## License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)\n",
-    "## [GPG Public key Fingerprint: CC02CF153594774CF956691492B2600D18170329](https://keys.openpgp.org/vks/v1/by-fingerprint/CC02CF153594774CF956691492B2600D18170329)"
+    "## [GPG Public key Fingerprint: B9F863A56220DBD56B91C3E835022A1A5941D810](https://keys.openpgp.org/vks/v1/by-fingerprint/B9F863A56220DBD56B91C3E835022A1A5941D810)"
    ]
   },
   {
@@ -13004,7 +13006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
